src/objects/Session_Practitioner__c.object
<CustomObject>
    <fields>
        <fullName>CADKey__c</fullName>
        <externalId>true</externalId>
        <label>CADKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAD</label>
        <referenceTo>CAD__c</referenceTo>
        <relationshipLabel>Session Practitioner</relationshipLabel>
        <relationshipName>Session_Practitioner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactKey__c</fullName>
        <externalId>true</externalId>
        <label>ContactKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dead_Time__c</fullName>
        <label>Dead Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Session Practitioner</relationshipLabel>
        <relationshipName>Session_Practitioner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SessionKey__c</fullName>
        <externalId>true</externalId>
        <label>SessionKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionPractitioner_Key__c</fullName>
        <externalId>true</externalId>
        <label>SessionPractitioner Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Session Practitioner</relationshipLabel>
        <relationshipName>Session_Practitioner</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>TEXT( 
FLOOR(End_Date__c -Start_Date__c) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
ROUND(MOD((End_Date__c- Start_Date__c)*24,24),0) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((End_Date__c - Start_Date__c)*1440,60),0) 
) &amp;&quot; Minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <type>Text</type>
    </fields>
    <label>Session Practitioner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Practitioner</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>